2001-02-25  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/Resend.pm (_munge_subject): Make use of
        subject_re_pattern and subject_re_strip settings.  Put the prefix
        after any existing Re: part.

	* lib/Mj/Util.pm (re_match): Accept a third argument and return
        the match array if present.

	* lib/mj_cf_data.pl: Add subject_re_pattern and subject_re_strip
        variables.

2001-02-24  Michael Yount <csf@moscow.com>

	* Makefile.PL:  Depend upon Socket instead of IO::Socket.
	Suggest reading the admin_domain help file with the new -P
	option to mj_shell.

	* bin/mj_confirm:  Add explanation box, as requested by 
	David Miller.

	* bin/mj_email, bin/mj_queuerun:  Use Symbol instead of IO::File. 
	Do not mail a reply if the request came from the server address.

	* bin/mj_queueserv:  Use Symbol instead of IO::File.  Add a
	routine to autoflush file handles.

	* bin/mj_shell:  Add "-P" option to show the output of commands
	in a pager.  The "default display" command can be used to show
	the output of any command in a pager or editor.  If an editor
	is used, mj_shell will attempt to execute commands from the file
	after the editing is completed.

	* bin/mj_wwwadm:  Increase the time before cache expiration to
	50 seconds.

	* lib/Majordomo.pm:  Version number is now 0.1200102240.
	Use Symbol instead of IO::File.
	(connect)  Reuse session files for logging if a temporary password
	is supplied.
	(_site_config_get, _global_config_get, _make_list) Move ubiquitous 
	methods above the autoload line.
	(_re_match) Move this routine to Mj::Util::re_match.
	(_get_stock) Use the FileSpace module instead of loading INDEX.pl.
	(_createlist) Include the new priority configuration setting
	when aliases are created.
	(_showtokens) Support the new "async" mode, which displays
	asynchronous tokens.  These tokens are created when a posted
	message is accepted, then delivered in the background.
	
	* lib/mj_cf_defs.pl, mj_cf_data.pl:  Support the archive_date